# Midstone-Flat-Eathers

./: .gitignore  CMakeLists.txt  GAME211_StudentTemplate.sln  Menu.cpp  Menu.h  README.md
GAME211_StudentTemplate/: Animation.cpp  Animation.h  Audio.cpp  Audio.h  BaseLevel.h  BasicLevel.cpp  BasicLevel.h  Body.cpp  Body.h  Citations.hpp  Clock.cpp  Clock.h  ConsistentConsole.cpp  ConsistentConsole.h  Drop.cpp  Drop.h  Enemy.cpp  Enemy.h  EntityMap.cpp  EntityMap.h  FadeTransition.cpp  FadeTransition.h  FileManager.cpp  FileManager.h  GAME211_StudentTemplate.vcxproj  GAME211_StudentTemplate.vcxproj.filters  GameManager.cpp  GameManager.h  GameObjects.cpp  GameObjects.h  Health.h  Hitbox.cpp  Hitbox.h  KeybindHandler.cpp  KeybindHandler.h  Level.h  Level1.cpp  Level1.h  Level2.cpp  Level2.h  (+62 more)
GAME211_StudentTemplate/SaveData/: currentSave.txt  entitymap.txt  settings.txt
GAME211_StudentTemplate/Textures/programmer_art/: effects sprite sheet.psd  new enemy sprites.psd  programmer art stuff.psd  sprite sheet.psd
SDL_Framework23.0.0/: Framework.sln
SDL_Framework23.0.0/Framework/: Audio.cpp  Audio.h  Body.cpp  Body.h  Clock.cpp  Clock.h  ConsistentConsole.cpp  ConsistentConsole.h  Entity.cpp  Entity.h  FileManager.cpp  FileManager.h  Framework.vcxproj  Framework.vcxproj.filters  GameManager.cpp  GameManager.h  GameObjects.cpp  GameObjects.h  Hitbox.cpp  Hitbox.h  Main.cpp  PMath.h  Player-GAMERGAMERGAMER-2.h  Player.cpp  Player.h  PrettyPrinting.h  README.txt  Save.cpp  Save.h  SaveManager.cpp  SaveManager.h  Scene.h  Scene0.cpp  Scene0.h  State.h  StateMachine.cpp  StateMachine.h  Textures.h  Timer.cpp  Timer.h  (+15 more)
SDL_Framework23.0.0/Framework/Debug/: Framework.exe.recipe  Framework.ilk  scene0.obj.enc  vc143.idb
SDL_Framework23.0.0/Framework/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Framework.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SDL_Framework23.0.0/Framework/SaveData/: currentSave.txt  save.txt  saveData.txt  tempSaveData.txt
SDL_Framework23.0.0/Framework/SaveData/old/: testFile.txt
SDL_Framework23.0.0/Framework/x64/Debug/: vc143.idb
SDL_Framework23.0.0/Framework/x64/Debug/Framework.tlog/: Framework.lastbuildstate
